<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseSummary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/guardians_night">
        <Button
            android:id="@+id/tickets_back_button"
            android:layout_gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_back_button"
            style="@style/backButtonStyle" />

        <TextView
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/guardians_gold_dark"
            android:text="@string/common_movie_name" />

        <TextView
            style="@style/secTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/guardians_stone"
            android:text="@string/purchaseSummary_title" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/summary_barcode"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/mainTextStyle"
            android:text="@string/purchaseSummary_hint_barcode"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:weightSum="16">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/secTitleStyle"
                    android:text="@string/purchaseSummary_screening_date"/>

                <TextView
                    android:id="@+id/summary_screening_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/mainTextStyle"
                    android:text="@string/purchaseSummary_screening_date"/>
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/secTitleStyle"
                    android:text="@string/purchaseSummary_screening_theatre"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/summary_cinema"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/mainTextStyle"
                        android:text="@string/purchaseSummary_screening_theatre"/>
                    <TextView
                        android:id="@+id/summary_vip_badge"
                        android:visibility="invisible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/vipBadgeStyle"
                        android:text="@string/common_vip_badge"/>
                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="20dp"
            android:gravity="start"
            android:weightSum="16">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="14"
                style="@style/secTitleStyle"
                android:text="@string/purchaseSummary_tickets_tobe_order_title"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:weightSum="22">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/thirdTitleStyle"
                    android:text="@string/purchaseSummary_adults_price"/>

                <TextView
                    android:id="@+id/summary_adults_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/mainTextStyle"
                    android:text="@string/purchaseSummary_adults_price"/>
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/thirdTitleStyle"
                    android:textColor="@color/white"
                    android:text="@string/purchaseSummary_kids_price"/>

                <TextView
                    android:id="@+id/summary_kids_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/mainTextStyle"
                    android:text="@string/purchaseSummary_kids_price"/>
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <LinearLayout
                android:id="@+id/vip_extra_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:visibility="invisible"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/thirdTitleStyle"
                    android:text="@string/purchaseSummary_vip_extra"/>
                <TextView
                    android:id="@+id/summary_vip_extra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    style="@style/mainTextStyle"
                    android:text="@string/purchaseSummary_vip_extra"/>
            </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="20">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:layout_gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/thirdTitleStyle"
                        android:text="@string/purchaseSummary_total_price"/>
                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/summary_total_price"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/mainTextStyle"
                        android:text="@string/purchaseSummary_total_price"/>
                </LinearLayout>

            <Button
                android:layout_gravity="center"
                android:id="@+id/pay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchaseSummary_approveAndPay_btn"
                style="@style/approveAndPayButtonStyle"/>
            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:src="@drawable/summary_rocket"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>